package edu.fiuba.algo3.modelo;

public class Jugador {

    public Jugador(String nombre){
        //TODO
    }

    public int obtenerPuntos(){
        //TODO
        return 0;
    }

    public void sumarPuntos(int puntos){
        //TODO
    }
}
