@startuml

class jugador{
}

class pregunta{
}

interface respuesta{
}

class Verdadero_Falso{
}

class Verdadero_Falso_con_penalidad{
}

jugador -> pregunta

pregunta --> respuesta


respuesta --> Verdadero_Falso
respuesta --> Verdadero_Falso_con_penalidad

respuesta --> Multiple_Choice
respuesta --> Ordered_Choice
respuesta --> Group_Choice



jugador -> interfaz_alterable



@enduml